compiler/tests/fixtures/valid/inscription.viv
// Item inscription — inscribe the current action onto an item

action write-note:
    roles:
        @writer:
            as: initiator
        @note:
            as: item
    effects:
        @note inscribe @this
