compiler/tests/fixtures/invalid/semantics/inscription_wrong_operand_types.viv
// Invalid: inscription with character roles in both operand positions

action write-secret:
    roles:
        @writer:
            as: initiator
        @confidant:
            as: partner
    effects:
        @confidant inscribe @writer
